hphp/hack/test/typecheck/reactive/memoize_mutable2.php
<?hh // partial

class A {}

<<__Rx, __Memoize, __MutableReturn>>
function f(): A {
  return new A();
}
